@@ -1,5 +1,7 @@
 2010-01-24  Russ Allbery  <rra@stanford.edu>
 
+	* t/basic.t: Add some basic tests for bright color support.
+
 	* ANSIColor.pm: Reorganize the documentation and be clearer about
 	the function interface parameters.  Reword the explanation of
 	bright and regular colors, and provide some advice about which to
